Story 4 update item implemented.